@@ -1,11 +1,11 @@
 package org.shadowrun.common.nodes.cells;
 
 import javafx.scene.control.ListCell;
-import org.shadowrun.common.constants.BarrierPreset;
+import org.shadowrun.common.constants.BarrierType;
 
-public class BarrierPresetCell extends ListCell<BarrierPreset> {
+public class BarrierPresetCell extends ListCell<BarrierType> {
     @Override
-    protected void updateItem(BarrierPreset item, boolean empty) {
+    protected void updateItem(BarrierType item, boolean empty) {
         super.updateItem(item, empty);
 
         if(empty) {
