@@ -9,7 +9,8 @@ import javafx.scene.control.TextField;
 import javafx.stage.Stage;
 import org.shadowrun.common.NumericLimitListener;
 import org.shadowrun.common.nodes.cells.BarrierPresetCell;
-import org.shadowrun.common.constants.BarrierPreset;
+import org.shadowrun.common.constants.BarrierType;
+import org.shadowrun.logic.AppLogic;
 import org.shadowrun.models.Barrier;
 
 import java.util.Arrays;
@@ -19,6 +20,7 @@ public class ControllerAddBarrier implements Controller {
 
     private Stage stage;
     private Barrier barrier;
+    private AppLogic appLogic;
 
     @FXML
     private TextField textField_name;
@@ -28,7 +30,7 @@ public class ControllerAddBarrier implements Controller {
     private TextField textField_armor;
 
     @FXML
-    private ComboBox<BarrierPreset> comboBox_preset;
+    private ComboBox<BarrierType> comboBox_preset;
 
     @FXML
     private Label label_description;
@@ -39,6 +41,7 @@ public class ControllerAddBarrier implements Controller {
     @FXML
     private void okOnAction() {
         barrier = new Barrier(textField_name.textProperty().get(),
+                comboBox_preset.getSelectionModel().getSelectedItem(),
                 Integer.parseInt(textField_structure.textProperty().get()),
                 Integer.parseInt(textField_armor.textProperty().get()));
         stage.close();
@@ -50,19 +53,20 @@ public class ControllerAddBarrier implements Controller {
     }
 
 
-    public void onOpen(Stage stage) {
+    public void onOpen(Stage stage, AppLogic appLogic) {
         this.stage = stage;
+        this.appLogic = appLogic;
         this.barrier = null;
 
+        textField_name.textProperty().setValue(appLogic.getConfig().getLatestBarrierName());
         textField_armor.textProperty().addListener(new NumericLimitListener(textField_armor, 0, null));
         textField_structure.textProperty().addListener(new NumericLimitListener(textField_structure, 0, null));
 
-        comboBox_preset.setItems(FXCollections.observableArrayList(Arrays.asList(BarrierPreset.values())));
+        comboBox_preset.setItems(FXCollections.observableArrayList(Arrays.asList(BarrierType.values())));
         comboBox_preset.setCellFactory(param -> new BarrierPresetCell());
         comboBox_preset.setButtonCell(new BarrierPresetCell());
         comboBox_preset.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
             if(newValue != null) {
-                textField_name.textProperty().setValue(newValue.getName());
                 textField_armor.textProperty().setValue(String.valueOf(newValue.getArmor()));
                 textField_structure.textProperty().setValue(String.valueOf(newValue.getStructure()));
                 label_description.textProperty().setValue(newValue.getDescription());
