@@ -2,15 +2,24 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<GridPane hgap="14.0" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../css/dark.css" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.shadowrun.controllers.ControllerAddBarrier">
+
+<GridPane hgap="14.0" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../css/dark.css" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.shadowrun.controllers.ControllerAddBarrier">
   <children>
       <FontAwesomeIconView glyphName="TH" size="48" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.valignment="TOP" />
     <VBox maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" prefWidth="400.0" spacing="7.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
       <children>
-        <Label fx:id="messageLabel" text="Add barrier" textAlignment="LEFT" wrapText="true">
+        <Label fx:id="messageLabel" text="Spawn barrier" textAlignment="LEFT" wrapText="true">
           <font>
             <Font name="System Bold" size="13.0" />
           </font>
@@ -22,7 +31,7 @@
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints />
-                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -34,7 +43,7 @@
                   <TextField fx:id="textField_name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField fx:id="textField_structure" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <TextField fx:id="textField_armor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <Label text="Preset" GridPane.rowIndex="1" />
+                  <Label text="Type" GridPane.rowIndex="1" />
                   <VBox GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
                         <ComboBox fx:id="comboBox_preset" prefHeight="26.0" prefWidth="328.0" />
