@@ -416,9 +416,10 @@
                                              <children>
                                                 <TableView fx:id="tableView_barrier" prefHeight="327.0" prefWidth="732.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                    <columns>
-                                                      <TableColumn fx:id="tableColumn_barrier_object" editable="false" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Barrier" />
-                                                      <TableColumn fx:id="tableColumn_barrier_structure" editable="false" maxWidth="80.0" minWidth="80.0" text="Structure" />
-                                                      <TableColumn fx:id="tableColumn_barrier_armor" editable="false" maxWidth="80.0" minWidth="80.0" text="Armor" />
+                                                      <TableColumn fx:id="tableColumn_barrier_object" editable="false" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="100.0" text="Barrier" />
+                                                      <TableColumn fx:id="tableColumn_barrier_type" prefWidth="75.0" text="Type" />
+                                                      <TableColumn fx:id="tableColumn_barrier_structure" editable="false" maxWidth="1.7976931348623157E308" minWidth="0.0" text="Structure" />
+                                                      <TableColumn fx:id="tableColumn_barrier_armor" editable="false" maxWidth="1.7976931348623157E308" minWidth="0.0" text="Armor" />
                                                    </columns>
                                                 </TableView>
                                              </children>
